# stockmarket_bot

./: .env.aggressive.example  .env.balanced.example  .env.example  .gitignore  README.md  alpaca_security_code  pyproject.toml
data/cache/alpaca/: stocks_AAPL_5Min_20260317T233812Z_20260324T233812Z_iex.json  stocks_AAPL_5Min_20260317T234819Z_20260324T234819Z_iex.json  stocks_AAPL_5Min_20260317T235407Z_20260324T235407Z_iex.csv  stocks_AAPL_5Min_20260317T235407Z_20260324T235407Z_iex.json  stocks_AAPL_5Min_20260318T000018Z_20260325T000018Z_iex.json
data/optimization/alpaca_opt_20260324_233812/: summary.json
data/optimization/alpaca_opt_20260324_234819/: summary.json  walk_forward_trials.csv  (+1 more)
scripts/: install_stream_service.sh  install_user_service.sh  optimize_alpaca_params.py  run_alpaca_stream.sh  run_alpaca_validation.sh  run_local.sh  sample_candles.csv  stream_alpaca_latest.py  validate_alpaca_backtest.py
src/api/: app.py  runtime.py  schemas.py
src/indicators/: heiken_ashi.py  multi_kernel_regression.py  nadaraya_watson.py  pipeline.py  trend_meter_macd.py
src/infra/: config.py  operational_params.py
src/services/: alpaca_historical_data.py  backtest_report_service.py  execution_engine.py  parameter_optimizer.py  signal_engine.py  symbol_state.py  trading_runtime.py
src/strategies/: ha_envelope_trend_meter.py
tests/: test_alpaca_broker.py  test_api.py  test_backtest_report_service.py  test_execution_engine.py  test_operational_params.py  test_paper_broker.py  test_parameter_optimizer.py  test_replay_metrics.py  test_runtime_builder.py  test_strategy.py
(+108 files in other folders)
